# openbrain

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: docker.yml
docs/: 02_appendix_hybrid_search.md  03_appendix_chunking_on_ingestion.md  04_appendix_slack_retrieval.md.md  05_appendix_undocumented_behavior.md  06_appendix_audio_capture.md.md  07_appendix_paperless_ngx_capture.md.md  08_appendix_retrieval_improvements.md  Personal Memory RAG System — Design Doc.md
migrations/: 001_initial.sql  002_fix_action_items_encoding.sql  003_hybrid_search.sql  004_chunking.sql  005_drop_embedding.sql  005_keywords_questions.sql  006_action_items_table.sql  007_drop_action_items_column.sql
scripts/: backfill_chunks.py  backfill_connections.py  migrate_enrichment.py
src/openbrain/: __init__.py  chunker.py  config.py  db.py  enrichment.py  main.py  mcp_server.py  models.py  paperless.py  pipeline.py  query_expansion.py  repository.py  search.py  slack_bot.py  synthesis.py  transcribe.py
src/openbrain/embeddings/: __init__.py  base.py  google.py  ollama.py  openai.py
tests/: conftest.py  test_chunker.py  test_enrichment.py  test_mcp_tools.py  test_repository.py  test_search.py
