[project]
name = "openbrain"
version = "0.1.0"
description = "Personal memory RAG system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "claude-agent-sdk>=0.1.48",
    "fastmcp>=3.1.0",
    "google-genai>=1.67.0",
    "httpx>=0.28.1",
    "openai>=2.27.0",
    "pgvector>=0.4.2",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pyyaml>=6.0.3",
    "aiohttp>=3.9.0",
    "slack-bolt[async]>=1.27.0",
    "tiktoken>=0.9.0",
    "nltk>=3.9",
]

[project.scripts]
openbrain = "openbrain.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
    "testcontainers[postgres]>=4.14.1",
]
